--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Snake game</title>
 </head>
 <body>
-    
+ <canvas id="canvas" width="400" height="400"></canvas>
+ <script src="https://code.jquery.com/jquery-2.1.0.js"></script>
+<script  src="/script.js" >
+ </script>
 </body>
 </html>
